Copyright (c) 2002-2009 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes
=============

Silva 2.2b1 (unreleased)
------------------------

- Fix an invalid syntax in webdav support.

- Fixed an issue in Kupu, where text got 'title' style instead
  of 'plain'.

- Fix from the 2.1 branch for a bug and improvement of the code for
  scaling and cropping images.

- Added sup and sub selectors to frontend.css to keep superscript and
  subscript better aligned.

- Added the YUI reset.css to silva.css and refactored accordingly,
  removing 50 lines or so.

- Removed the sortable css id/class from templates, js, and
  stylesheets.  This triggered some link problems with listing links
  that rendered as blocks instead of inline. Could've used the id but
  extensions may not have it, so added an unblock class to be used in
  a tbody or tr.

- Silva Indexer now store an id to objects, this makes indexes more
  resistant to object renaming/moving. The preview of Indexer have
  been fixed as well.

- Add support for new silva.core.layout to customize error messages
  (unauthorized, 404, errors)...

- Fix bug on service subscription when using MaildropHost with Zope
  2.11+.

- Fix a race condition on the sidebar in SMI, which makes make two
  request on the server, creating from times to times a ConflictError
  or ReadConflictError. Fix other SMI code which was triggering
  ConflictError as well.

- Fix breadcrumb on tab_preview.

- Logout link redirect you to the nearest publication (with PAS at
  least).

- LinesFields in external sources would not be saved in kupu if they
  were empty.

- zip files generated in MACOSX can now be imported -- the skips meta
  information directories are now skipped (__MACOSX and .DS_Store)

Silva 2.2a2 (2009-01-12)
------------------------

New Features
~~~~~~~~~~~~

- A New "Kupu Popup" formulator field.  This field is for html content
  and pops up a "popup kupu" to provide easy wysiwyg editing.
